# BLIND

./: .gitignore  CMakeLists.txt  TODO.org  flake.nix  report.md
report/: CMakeLists.txt  report.md
src/: CMakeLists.txt  arg-parser.cc  main.cc
src/arg-parser/: CMakeLists.txt  arg-parser.cc  arg-parser.hh
src/car/: CMakeLists.txt  Makefile  car.ino
src/common/: CMakeLists.txt  blob.hh  constants.hh  generate_kernel.cc  generate_kernel.hh  kernels.hh  output.cc  output.hh
src/cpu/: CMakeLists.txt  ccl.cc  ccl.hh  main.cc  main.hh  morphological.cc  morphological.hh  operations.cc  operations.hh
src/process/: CMakeLists.txt  process.cc  process.hh
src/serial/: CMakeLists.txt  serial.cc  serial.hh
